--- a/index.html
+++ b/index.html
@@ -393,7 +393,7 @@
             <div class="relative">
               <div class="w-80 h-80 rounded-2xl bg-gradient-to-br from-cyan-400 to-blue-600 p-1 glow-effect">
                 <div class="w-full h-full rounded-2xl bg-slate-800 flex items-center justify-center">
-                  <img src="/public/img/my-picture.png" alt="Pierre Avestruz" class="w-72 h-72 rounded-xl object-cover" />
+                  <img src="my-picture.png" alt="Pierre Avestruz" class="w-72 h-72 rounded-xl object-cover" />
                 </div>
               </div>
               <div class="absolute -bottom-4 -right-4 bg-cyan-500 text-white p-4 rounded-lg shadow-lg">
