--- a/index.html
+++ b/index.html
@@ -518,7 +518,7 @@
           >
             <div class="project-image h-48 flex items-center justify-center overflow-hidden rounded-t-lg">
               <div class="text-center transform transition-all duration-500 group-hover:scale-105">
-                <img src="/public/img/lbelib.png" alt="LBELIB Project" class="w-full h-full object-cover transition-all duration-500 group-hover:brightness-110" />
+                <img src="lbelib.png" alt="LBELIB Project" class="w-full h-full object-cover transition-all duration-500 group-hover:brightness-110" />
               </div>
             </div>
             <div class="p-6">
@@ -546,7 +546,7 @@
           >
             <div class="project-image h-48 flex items-center justify-center overflow-hidden">
               <div class="text-center transform transition-all duration-500 group-hover:scale-105">
-                <img src="/public/img/coffee-shop.png" alt="Coffee Life" class="w-full h-full object-cover transition-all duration-500 group-hover:brightness-110" />
+                <img src="coffee-shop.png" alt="Coffee Life" class="w-full h-full object-cover transition-all duration-500 group-hover:brightness-110" />
               </div>
             </div>
             <div class="p-6">
@@ -570,7 +570,7 @@
           >
             <div class="project-image h-48 flex items-center justify-center overflow-hidden">
               <div class="text-center transform transition-all duration-500 group-hover:scale-105">
-                <img src="/public/img/killing-intent.png" alt="Killing Intent" class="w-full h-full object-cover transition-all duration-500 group-hover:brightness-110" />
+                <img src="killing-intent.png" alt="Killing Intent" class="w-full h-full object-cover transition-all duration-500 group-hover:brightness-110" />
               </div>
             </div>
             <div class="p-6">
@@ -592,7 +592,7 @@
           >
             <div class="project-image h-48 flex items-center justify-center overflow-hidden">
               <div class="text-center transform transition-all duration-500 group-hover:scale-105">
-                <img src="/public/img/arboresque.png" alt="Arboresque" class="w-full h-full object-cover transition-all duration-500 group-hover:brightness-110" />
+                <img src="arboresque.png" alt="Arboresque" class="w-full h-full object-cover transition-all duration-500 group-hover:brightness-110" />
               </div>
             </div>
             <div class="p-6">
