--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Pierre Avestruz Potfolio</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet" />
-    <link rel="icon" type="image" href="/personal-logo-portfolio.png" />
+    <link rel="icon" type="image" href="/public/img/personal-logo-portfolio.png" />
     <link rel="stylesheet" href="/public/css/index.css" />
   </head>
   <body class="bg-slate-900 text-white">
@@ -46,26 +46,26 @@
     <nav class="fixed top-0 w-full bg-slate-900/95 backdrop-blur-sm z-50 border-b border-slate-800" id="navbar">
       <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
         <div class="flex justify-between items-center py-4 nav-container">
-          <div class="me-7"><img class="w-11" src="/public/img/personal-logo-portfolio.png" alt="my personal logo"/></div>
-          <div class="flex space-x-8 md:space-x-8" id="nav-links">
+          <div class="ms-4"><img class="w-8 sm:w-11" src="/public/img/personal-logo-portfolio.png" alt="my personal logo"/></div>
+          <div class="flex space-x-5 md:space-x-8 " id="nav-links">
             <a href="#home" class="nav-link hover:text-cyan-400 flex items-center space-x-2">
-              <i class="fas fa-home nav-icon"></i>
+              <i class="fas fa-home nav-icon text-xs sm:text-base"></i>
               <span class="nav-text">Home</span>
             </a>
             <a href="#about" class="nav-link hover:text-cyan-400 flex items-center space-x-2">
-              <i class="fas fa-user nav-icon"></i>
+              <i class="fas fa-user nav-icon text-xs sm:text-base"></i>
               <span class="nav-text">About</span>
             </a>
             <a href="#experience" class="nav-link hover:text-cyan-400 flex items-center space-x-2">
-              <i class="fas fa-briefcase nav-icon"></i>
+              <i class="fas fa-briefcase nav-icon text-xs sm:text-base"></i>
               <span class="nav-text">Experience</span>
             </a>
             <a href="#projects" class="nav-link hover:text-cyan-400 flex items-center space-x-2">
-              <i class="fas fa-code nav-icon"></i>
+              <i class="fas fa-code nav-icon text-xs sm:text-base"></i>
               <span class="nav-text">Projects</span>
             </a>
             <a href="#contact" class="nav-link hover:text-cyan-400 flex items-center space-x-2">
-              <i class="fas fa-envelope nav-icon"></i>
+              <i class="fas fa-envelope nav-icon text-xs sm:text-base"></i>
               <span class="nav-text">Contact</span>
             </a>
           </div>
@@ -517,9 +517,9 @@
     </section>
 
     <!-- Footer -->
-    <footer class="bg-slate-800 border-t border-slate-700 py-8">
+    <footer class="bg-slate-800 border-t border-slate-700 py-5">
       <div class="max-w-6xl mx-auto flex flex-col md:flex-row justify-between items-center">
-        <div class="text-cyan font-bold text-xl me-8 md:mb-0"><img class="w-11" src="/public/img/personal-logo-portfolio.png" alt="my personal logo"/></div>
+        <div class="text-cyan font-bold text-xl me-0 md:me-8 mb-5 md:mb-0"><img class="w-8 sm:w-11" src="/public/img/personal-logo-portfolio.png" alt="my personal logo"/></div>
         <div>
           <p class="text-gray-400 mb-4">© 2025 Pierre Avestruz. All rights reserved.</p>
           <p class="text-gray-500 text-sm">Built with passion and modern web technologies</p>
