lbelib project showcase finised

--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
 
       <div class="text-center z-10 fade-in-up">
         <div class="flex justify-center mb-8">
-          <img style="width: 250px" src="/public/img/personal-logo-portfolio.png" alt="" />
+          <img class="w-[10rem] md:w-[16rem]" src="/public/img/personal-logo-portfolio.png" alt="" />
         </div>
         <h1 class="text-5xl md:text-7xl font-bold mb-4">Pierre <span class="text-cyan-400">Avestruz</span></h1>
         <div class="text-xl md:text-2xl text-gray-300 mb-8 typing-animation">Front End Developer</div>
@@ -290,7 +290,7 @@
             <a href="/views/pages/lbelib.html">
               <div class="project-image h-48 flex items-center justify-center overflow-hidden rounded-t-lg">
                 <div class="text-center transform transition-all duration-500 group-hover:scale-105">
-                  <img src="/public/img/lbelib/home-page.png" alt="LBELIB Project" class="w-full h-full object-cover transition-all duration-500 group-hover:brightness-110" />
+                  <img src="/public/img/lbelib/student/home-page.png" alt="LBELIB Project" class="w-full h-full object-cover transition-all duration-500 group-hover:brightness-110" />
                 </div>
               </div>
               <div class="p-6">
