--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <title>Pierre Avestruz Potfolio</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet" />
-    <link rel="icon" type="image" href="/public/img/personal-logo-portfolio.png" />
-    <link rel="stylesheet" href="/public/css/index.css" />
+    <link rel="icon" type="image" href="public/img/personal-logo-portfolio.png" />
+    <link rel="stylesheet" href="public/css/index.css" />
   </head>
   <body class="bg-slate-900 text-white">
     <!-- Success Modal -->
@@ -46,7 +46,7 @@
     <nav class="fixed top-0 w-full bg-slate-900/95 backdrop-blur-sm z-50 border-b border-slate-800" id="navbar">
       <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
         <div class="flex justify-between items-center py-4 nav-container">
-          <div class="ms-4"><img class="w-8 sm:w-11" src="/public/img/personal-logo-portfolio.png" alt="my personal logo"/></div>
+          <div class="ms-4"><img class="w-8 sm:w-11" src="public/img/personal-logo-portfolio.png" alt="my personal logo"/></div>
           <div class="flex space-x-5 md:space-x-8 " id="nav-links">
             <a href="#home" class="nav-link hover:text-cyan-400 flex items-center space-x-2">
               <i class="fas fa-home nav-icon text-xs sm:text-base"></i>
@@ -86,7 +86,7 @@
 
       <div class="text-center z-10 fade-in-up">
         <div class="flex justify-center mb-8">
-          <img class="w-[10rem] md:w-[16rem]" src="/public/img/personal-logo-portfolio.png" alt="" />
+          <img class="w-[10rem] md:w-[16rem]" src="public/img/personal-logo-portfolio.png" alt="" />
         </div>
         <h1 class="text-5xl md:text-7xl font-bold mb-4">Pierre <span class="text-cyan-400">Avestruz</span></h1>
         <div class="text-xl md:text-2xl text-gray-300 mb-8 typing-animation">Front End Developer</div>
@@ -164,7 +164,7 @@
             <div class="relative">
               <div class="w-80 h-80 rounded-2xl bg-gradient-to-br from-cyan-400 to-blue-600 p-1 glow-effect">
                 <div class="w-full h-full rounded-2xl bg-slate-800 flex items-center justify-center">
-                  <img src="/public/img/my-picture.png" alt="Pierre Avestruz" class="w-72 h-72 rounded-xl object-cover" />
+                  <img src="public/img/my-picture.png" alt="Pierre Avestruz" class="w-72 h-72 rounded-xl object-cover" />
                 </div>
               </div>
               <div class="absolute -bottom-4 -right-4 bg-cyan-500 text-white p-4 rounded-lg shadow-lg">
@@ -290,7 +290,7 @@
             <a href="/views/pages/lbelib.html">
               <div class="project-image h-48 flex items-center justify-center overflow-hidden rounded-t-lg">
                 <div class="text-center transform transition-all duration-500 group-hover:scale-105">
-                  <img src="/public/img/lbelib/student/home-page.png" alt="LBELIB Project" class="w-full h-full object-cover transition-all duration-500 group-hover:brightness-110" />
+                  <img src="public/img/lbelib/student/home-page.png" alt="LBELIB Project" class="w-full h-full object-cover transition-all duration-500 group-hover:brightness-110" />
                 </div>
               </div>
               <div class="p-6">
@@ -319,7 +319,7 @@
           >
             <div class="project-image h-48 flex items-center justify-center overflow-hidden">
               <div class="text-center transform transition-all duration-500 group-hover:scale-105">
-                <img src="/public/img/coffee-shop/coffee-shop.png" alt="Coffee Life" class="w-full h-full object-cover transition-all duration-500 group-hover:brightness-110" />
+                <img src="public/img/coffee-shop/coffee-shop.png" alt="Coffee Life" class="w-full h-full object-cover transition-all duration-500 group-hover:brightness-110" />
               </div>
             </div>
             <div class="p-6">
@@ -343,7 +343,7 @@
           >
             <div class="project-image h-48 flex items-center justify-center overflow-hidden">
               <div class="text-center transform transition-all duration-500 group-hover:scale-105">
-                <img src="/public/img/killint intent/killing-intent.png" alt="Killing Intent" class="w-full h-full object-cover transition-all duration-500 group-hover:brightness-110" />
+                <img src="public/img/killint intent/killing-intent.png" alt="Killing Intent" class="w-full h-full object-cover transition-all duration-500 group-hover:brightness-110" />
               </div>
             </div>
             <div class="p-6">
@@ -367,7 +367,7 @@
           >
             <div class="project-image h-48 flex items-center justify-center overflow-hidden">
               <div class="text-center transform transition-all duration-500 group-hover:scale-105">
-                <img src="/public/img/arboresque/arboresque.png" alt="Arboresque" class="w-full h-full object-cover transition-all duration-500 group-hover:brightness-110" />
+                <img src="public/img/arboresque/arboresque.png" alt="Arboresque" class="w-full h-full object-cover transition-all duration-500 group-hover:brightness-110" />
               </div>
             </div>
             <div class="p-6">
@@ -499,12 +499,12 @@
               <!-- CV Preview Display -->
               <div class="bg-white rounded-lg p-6 mb-6 shadow-lg">
                 <div class="text-gray-800">
-                  <img src="/public/img/cv.png" alt="My Resume" class="w-full h-auto rounded-lg mb-4" />
+                  <img src="public/img/cv.png" alt="My Resume" class="w-full h-auto rounded-lg mb-4" />
                 </div>
               </div>
               <!-- Download Button -->
               <a
-                href="/public/CV - PIERRE ELDRIC D. AVESTRUZ.pdf"
+                href="public/CV - PIERRE ELDRIC D. AVESTRUZ.pdf"
                 download
                 class="w-full bg-cyan-500 hover:bg-cyan-600 px-8 py-3 rounded-lg font-semibold transition-all duration-300 glow-effect inline-flex items-center justify-center"
               >
@@ -519,7 +519,7 @@
     <!-- Footer -->
     <footer class="bg-slate-800 border-t border-slate-700 py-5">
       <div class="max-w-6xl mx-auto flex flex-col md:flex-row justify-between items-center">
-        <div class="text-cyan font-bold text-xl me-0 md:me-8 mb-5 md:mb-0"><img class="w-8 sm:w-11" src="/public/img/personal-logo-portfolio.png" alt="my personal logo"/></div>
+        <div class="text-cyan font-bold text-xl me-0 md:me-8 mb-5 md:mb-0"><img class="w-8 sm:w-11" src="public/img/personal-logo-portfolio.png" alt="my personal logo"/></div>
         <div>
           <p class="text-gray-400 mb-4">© 2025 Pierre Avestruz. All rights reserved.</p>
           <p class="text-gray-500 text-sm">Built with passion and modern web technologies</p>
@@ -537,7 +537,7 @@
         </div>
       </div>
     </footer>
-    <script src="/public/js/index.js"></script>
+    <script src="public/js/index.js"></script>
     <!-- EmailJS Script -->
     <script src="https://cdn.jsdelivr.net/npm/@emailjs/browser@3/dist/email.min.js"></script>
     <script>
