--- a/index.html
+++ b/index.html
@@ -282,7 +282,7 @@
       <div class="max-w-7xl mx-auto px-4 sm:px-7 lg:px-8">
         <h2 class="text-4xl font-bold text-center mb-16">Featured <span class="text-cyan-400">Projects</span></h2>
 
-        <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-2 gap-8">
+        <div class="grid grid-cols-1 md:grid-cols-2 gap-8">
           <!-- Project 1 -->
           <div
             class="project bg-slate-900 rounded-lg card-hover border border-slate-700 transform transition-all duration-500 ease-out hover:scale-110 hover:shadow-2xl hover:shadow-cyan-500/20 hover:border-cyan-500/50 will-change-transform group"
@@ -410,7 +410,7 @@
           </div>
 
           <!-- Hidden Projects Grid -->
-          <div id="hiddenProjects" class="hidden">
+          <div id="hiddenProjects" class="md:hidden">
             <!-- Project 5 (Example) -->
             <div
               class="project bg-slate-900 rounded-lg overflow-hidden card-hover border border-slate-700 transform transition-all duration-500 ease-out hover:scale-110 hover:shadow-2xl hover:shadow-cyan-500/20 hover:border-cyan-500/50 will-change-transform group"
@@ -445,7 +445,7 @@
           </div>
 
           <!-- Show More Button -->
-          <div class="text-center mt-12 col-span-2">
+          <div class="text-center mt-12 col-span-2 hidden md:block">
             <button
               id="showMoreProjects"
               class="hover:bg-cyan-600 text-white font-bold px-2 rounded-lg transition-all duration-300 transform hover:scale-105 hover:shadow-lg hover:shadow-cyan-500/30"
