--- a/index.html
+++ b/index.html
@@ -418,16 +418,12 @@
               <a href="/views/pages/case-record.html">
                 <div class="project-image h-48 flex items-center justify-center overflow-hidden">
                   <div class="text-center transform transition-all duration-500 group-hover:scale-105">
-                    <img
-                      src="/public/img/ojt/ojt-login.png"
-                      alt="Your Project"
-                      class="w-full h-full object-cover transition-all duration-500 group-hover:brightness-110"
-                    />
+                    <img src="/public/img/ojt/ojt-login.png" alt="Your Project" class="w-full h-full object-cover transition-all duration-500 group-hover:brightness-110" />
                   </div>
                 </div>
                 <div class="p-6">
                   <h3 class="text-xl font-bold mb-3">Case Records Repository</h3>
-                  <p class="text-gray-300 mb-4">Your project description here.</p>
+                  <p class="text-gray-300 mb-4">A system proposal to help with the meticulous task of manually sorting and recording criminal case records.</p>
                   <div class="flex flex-wrap gap-2 mb-4">
                     <!-- Your tech stack badges -->
                     <span class="bg-orange-500/20 text-orange-400 px-2 py-1 rounded text-sm">HTML/CSS</span>
